[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/lib/UIControllerAudio.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/ui/focus_click.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/ui/menu_select.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/ui/menu_cancel.wav" type="AudioStream" id=4]

[node name="UIControllerAudio" type="Node"]
script = ExtResource( 1 )

[node name="FocusAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Interface"

[node name="MenuSelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Interface"

[node name="MenuCancelAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Interface"
